--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^7.1.2",
     "@rails/webpacker": "5.4.4",
+    "data-confirm-modal": "^1.6.2",
     "flatpickr": "^4.6.13",
     "jquery": "^3.7.1",
     "jquery-ujs": "^1.2.3",
